// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-3[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-3[aria-disabled='true'] .emotion-8 {
  fill: #e9eaeb;
}

.emotion-3[aria-disabled='true'] .emotion-8 .emotion-10 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 {
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 .emotion-10 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-3 .emotion-6:checked+.emotion-8 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-3 .emotion-6:checked+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3 .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #e51963;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-3 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-5:not(:disabled) {
  cursor: pointer;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:not(:disabled):checked+.emotion-8,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 {
  fill: #8c40ef;
}

.emotion-5:not(:disabled):checked+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #8c40ef;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 {
  fill: #ffebf2;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 .emotion-10 {
  stroke: #b3144d;
}

.emotion-5:focus+.emotion-8 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-5:focus+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-7 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-11 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«r1»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r1»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«r4»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r4»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-3[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-3[aria-disabled='true'] .emotion-8 {
  fill: #e9eaeb;
}

.emotion-3[aria-disabled='true'] .emotion-8 .emotion-10 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 {
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 .emotion-10 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-3 .emotion-6:checked+.emotion-8 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-3 .emotion-6:checked+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3 .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #e51963;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-3 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-5:not(:disabled) {
  cursor: pointer;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:not(:disabled):checked+.emotion-8,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 {
  fill: #8c40ef;
}

.emotion-5:not(:disabled):checked+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #8c40ef;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 {
  fill: #ffebf2;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 .emotion-10 {
  stroke: #b3144d;
}

.emotion-5:focus+.emotion-8 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-5:focus+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-7 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-11 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«rf»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rf»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«ri»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«ri»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-3[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-3[aria-disabled='true'] .emotion-8 {
  fill: #e9eaeb;
}

.emotion-3[aria-disabled='true'] .emotion-8 .emotion-10 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 {
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 .emotion-10 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-3 .emotion-6:checked+.emotion-8 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-3 .emotion-6:checked+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3 .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #e51963;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-3 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-5:not(:disabled) {
  cursor: pointer;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:not(:disabled):checked+.emotion-8,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 {
  fill: #8c40ef;
}

.emotion-5:not(:disabled):checked+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #8c40ef;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 {
  fill: #ffebf2;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 .emotion-10 {
  stroke: #b3144d;
}

.emotion-5:focus+.emotion-8 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-5:focus+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-7 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-11 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby="«ru»-hint"
                aria-invalid="true"
                class="emotion-5 emotion-6"
                id="«ru»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«ru»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby="«r11»-hint"
                aria-invalid="true"
                class="emotion-5 emotion-6"
                id="«r11»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r11»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-3[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-3[aria-disabled='true'] .emotion-8 {
  fill: #e9eaeb;
}

.emotion-3[aria-disabled='true'] .emotion-8 .emotion-10 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 {
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 .emotion-10 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-3 .emotion-6:checked+.emotion-8 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-3 .emotion-6:checked+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3 .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #e51963;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-3 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-5:not(:disabled) {
  cursor: pointer;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:not(:disabled):checked+.emotion-8,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 {
  fill: #8c40ef;
}

.emotion-5:not(:disabled):checked+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #8c40ef;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 {
  fill: #ffebf2;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 .emotion-10 {
  stroke: #b3144d;
}

.emotion-5:focus+.emotion-8 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-5:focus+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-7 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-11 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«rm»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rm»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«rp»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rp»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with no CheckboxGroup.Checkbox name 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-3[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-3[aria-disabled='true'] .emotion-8 {
  fill: #e9eaeb;
}

.emotion-3[aria-disabled='true'] .emotion-8 .emotion-10 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 {
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 .emotion-10 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-3 .emotion-6:checked+.emotion-8 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-3 .emotion-6:checked+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3 .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #e51963;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-3 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-5:not(:disabled) {
  cursor: pointer;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:not(:disabled):checked+.emotion-8,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 {
  fill: #8c40ef;
}

.emotion-5:not(:disabled):checked+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #8c40ef;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 {
  fill: #ffebf2;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 .emotion-10 {
  stroke: #b3144d;
}

.emotion-5:focus+.emotion-8 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-5:focus+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-7 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-11 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«r8»"
                name="Checkbox."
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r8»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«rb»"
                name="Checkbox."
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rb»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-3[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-3[aria-disabled='true'] .emotion-8 {
  fill: #e9eaeb;
}

.emotion-3[aria-disabled='true'] .emotion-8 .emotion-10 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 {
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6:checked+.emotion-8 .emotion-10 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 {
  fill: #e5dbfd;
}

.emotion-3[aria-disabled='true'] .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-3 .emotion-6:checked+.emotion-8 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-3 .emotion-6:checked+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3 .emotion-6[aria-invalid="true"]:checked+.emotion-8 .emotion-10 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-3 .emotion-6[aria-checked="mixed"]+.emotion-8 .emotion-10 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='false'][aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='false']+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-3:hover[aria-disabled='false'] .emotion-6[aria-invalid='true'][aria-checked='true']+.emotion-8 .emotion-10 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 {
  fill: #e51963;
}

.emotion-3 .emotion-6[aria-invalid="true"]+.emotion-8 .emotion-10 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-3 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-5:not(:disabled) {
  cursor: pointer;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:not(:disabled):checked+.emotion-8,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 {
  fill: #8c40ef;
}

.emotion-5:not(:disabled):checked+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-checked='mixed']+.emotion-8 .emotion-10 {
  stroke: #8c40ef;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 {
  fill: #ffebf2;
}

.emotion-5:not(:disabled)[aria-invalid='true']+.emotion-8 .emotion-10,
.emotion-5:not(:disabled)[aria-invalid='mixed']+.emotion-8 .emotion-10 {
  stroke: #b3144d;
}

.emotion-5:focus+.emotion-8 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-5:focus+.emotion-8 .emotion-10 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[aria-invalid='true']:focus+.emotion-8 .emotion-10 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-7 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-11 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <legend
                class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              >
                Label
              </legend>
              <span
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«r17»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r17»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-2 emotion-3 emotion-4"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-5 emotion-6"
                id="«r1a»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-7 emotion-8"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-9 emotion-10"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="emotion-11 emotion-12 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r1a»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
